@@ -1,3 +1,4 @@
+	* improve support for HTTP where one direction of the socket is shut down.
 	* remove internal fields from web_seed_entry
 	* separate crypto library configuration <crypto> and whether to support
 	  bittorrent protocol encryption <encryption>
